--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,7 +37,7 @@ jobs:
 #           password: ${{ secrets.DOCKER_PASSWORD }}
           
 #       - name: Build and push Angular Image
-#         id: nmanthena
+#         id: nmanthena/nmanthena
 #         uses: docker/build-push-action@v2
 #         with:
 #           context: .
