--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,28 +1,28 @@
-name: Docker Image CI Ang
+# name: Docker Image CI Ang
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+# on:
+#   push:
+#     branches: [ master ]
+#   pull_request:
+#     branches: [ master ]
 
-jobs:
+# jobs:
 
-  build:
+#   build:
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: docker login
-      env:
-        DOCKER_USER: ${{secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD }}
-        TAG_NAME: $(date +%s)
-      run: |
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag nmanthena/angular:v1
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: docker login
+#       env:
+#         DOCKER_USER: ${{secrets.DOCKER_USERNAME }}
+#         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD }}
+#         TAG_NAME: $(date +%s)
+#       run: |
+#         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+#     - name: Build the Docker image
+#       run: docker build . --file Dockerfile --tag nmanthena/angular:v1
       
-    - name: Docker Push
-      run: docker push nmanthena/angular:v1
+#     - name: Docker Push
+#       run: docker push nmanthena/angular:v1
