--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,10 +23,11 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
         name: Build and push
+        id: nmanthena/angular:${{ github.sha }}
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: nmanthena/angular:latest
+          tags: nmanthena/angular:${{ github.sha }}
         
     
 #       - name: Login to Docker Hub
