--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,6 +12,8 @@ jobs:
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+        
+      - script echo ${{ github.sha }}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
