--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,7 +4,10 @@ on:
   push:
     branches:
       - 'master'
-
+# Environment variables available to all jobs and steps in this workflow
+env:
+  IMAGE_TAG: ${{ date +%s }}
+  
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -13,7 +16,7 @@ jobs:
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
         
-      - script echo ${{ github.sha }}
+      - script echo ${{ date +%s }}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -25,11 +28,11 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
         name: Build and push
-        id: nmanthena/angular:${{ github.sha }}
+        id: nmanthena/angular:${{ env.IMAGE_TAG }}
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: nmanthena/angular:${{ github.sha }}
+          tags: nmanthena/angular:${{ env.IMAGE_TAG }}
         
     
 #       - name: Login to Docker Hub
@@ -45,4 +48,4 @@ jobs:
 #           context: .
 #           file: ./Dockerfile
 #           push: true
-#           tags: ${{ secrets.DOCKER_USERNAME }}/angular:${{ github.sha }}
+#           tags: ${{ secrets.DOCKER_USERNAME }}/angular:${{ env.IMAGE_TAG }}
