--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,11 +25,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
         name: Build and push
-        id: nmanthena/angular:new
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: nmanthena/angular:new
+          tags: nmanthena/angular:latest
         
     
 #       - name: Login to Docker Hub
