--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - 'master'
-# Environment variables available to all jobs and steps in this workflow
-
   
 jobs:
   docker:
@@ -14,6 +12,8 @@ jobs:
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+      -
+        run: echo $(git rev-parse --short "$GITHUB_SHA")
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
