--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       -
-        run: echo $(git rev-parse --short "$GITHUB_SHA")
+        run: echo $(github.sha)
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
