--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,15 +9,18 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+    
+      - name: Set outputs
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+      - name: Check outputs
+        run: echo ${{ steps.vars.outputs.sha_short }}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
