--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,12 +9,8 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-    
-      - name: Set outputs
-        id: vars
-        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-      - name: Check outputs
-        run: echo ${{ steps.vars.outputs.sha_short }}
+      - 
+        run: echo ${GITHUB_SHA::7}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -28,13 +24,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
-        name: Build and push
-        uses: docker/build-push-action@v2
+        name: Build and push       
+        uses: docker/build-push-action@v2       
         with:
           push: true
           tags: nmanthena/angular:latest
         
-    
+  
 #       - name: Login to Docker Hub
 #         uses: docker/login-action@v1
 #         with:
