--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,13 +4,15 @@ on:
   push:
     branches:
       - 'master'
-  
+# Environment variables available to all jobs and steps in this workflow
+env:
+  IMAGE_TAG: ${GITHUB_SHA::7}
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
       - 
-        run: echo ${GITHUB_SHA::7}
+        run: echo ${env.IMAGE_TAG}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
