--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,11 +26,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
-        name: Build and push       
+        name: Build and push
+        id: nmanthena/angular:${{env.IMAGE_TAG}}
         uses: docker/build-push-action@v2       
         with:
           push: true
-          tags: nmanthena/angular:latest
+          tags: nmanthena/angular:${{env.IMAGE_TAG}}
         
   
 #       - name: Login to Docker Hub
