--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v2       
         with:
           push: true
-          tags: nmanthena/angular:${{env.IMAGE_TAG}}
+          tags: nmanthena/angular:${GITHUB_SHA::7}
         
   
 #       - name: Login to Docker Hub
