--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - 
-        run: echo ${{env.IMAGE_TAG}}
+        run: echo :${{ github.sha }}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v2       
         with:
           push: true
-          tags: nmanthena/angular:${GITHUB_SHA::7}
+          tags: nmanthena/angular:${{ github.sha }}
         
   
 #       - name: Login to Docker Hub
